add updating room
