# src/main/resources/api/api.yml
@@ -383,6 +383,48 @@ paths:
                 '503':
                     description: "Database connection failed"
 
+        put:
+            tags:
+                - "room"
+            summary: "Update room"
+            description: "Update room"
+            operationId: "updateRoom"
+            parameters:
+                -   name: resort-name
+                    in: path
+                    required: true
+                    schema:
+                        type: string
+                -   name: room-number
+                    in: path
+                    required: true
+                    schema:
+                        type: integer
+                        minimum: 1
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/addRoomRequest'
+            responses:
+                '201':
+                    description: 'Operation successful'
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/roomPayload'
+                '400':
+                    description: "Bad request"
+                '404':
+                    description: "Not found"
+                '409':
+                    description: "Conflict"
+                '500':
+                    description: "Internal server error"
+                '503':
+                    description: "Database connection failed"
+
         delete:
             tags:
                 - "room"
